// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the condensed table with some analyses in non-debug mode for a Conversion Metric 1`] = `
<div
  class="analysis-latest-results"
>
  <div
    class="makeStyles-root-21"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
      style="position: relative;"
    >
      <div
        class="Component-horizontalScrollContainer-27"
        style="overflow-x: auto; position: relative;"
      >
        <div>
          <div
            style="overflow-y: auto;"
          >
            <div>
              <table
                class="MuiTable-root"
                style="table-layout: auto;"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-28 MuiTableCell-paddingNone"
                      scope="col"
                      style="font-weight: 700;"
                    />
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-28 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Metric
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-28 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Attribution window
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-28 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Recommendation
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="0"
                    level="0"
                    path="0"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                          disabled=""
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_1
                       
                      <div
                        aria-disabled="true"
                        class="MuiChip-root makeStyles-primaryChip-22 MuiChip-outlined Mui-disabled"
                      >
                        <span
                          class="MuiChip-label"
                        >
                          Primary
                        </span>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      1 week
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Manual analysis required
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="1"
                    level="0"
                    path="1"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                          disabled=""
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_2
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      4 weeks
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Not analyzed yet
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="2"
                    level="0"
                    path="2"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                          disabled=""
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_2
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      1 hour
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Not analyzed yet
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="3"
                    level="0"
                    path="3"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root"
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_3
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      6 hours
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Deploy 
                      test
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the condensed table with some analyses in non-debug mode for a Conversion Metric 2`] = `
<div
  class="MuiTableContainer-root makeStyles-root-29 analysis-detail-panel"
>
  <table
    class="MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          role="cell"
          scope="row"
        >
          Last analyzed
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <span
            class="makeStyles-root-34"
            title="09/05/2020, 20:00:00"
          >
            2020-05-10
          </span>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          role="cell"
          scope="row"
        >
          Analysis strategy
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-dataCell-31"
        >
          Exposed without crossovers and spammers
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          role="cell"
          scope="row"
        >
          Analyzed participants
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-dataCell-31"
        >
          1400
           (
          140
           not final
          <span>
            ; 
            840
             in 
            control
          </span>
          <span>
            ; 
            560
             in 
            test
          </span>
          )
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          role="cell"
          scope="row"
        >
          Difference interval
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-dataCell-31"
        >
          [
          -0.01
          ,
          0.01
          ]
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          role="cell"
          scope="row"
        >
          Warnings
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-dataCell-31"
        >
          <div>
            Experiment period is too short. Wait a few days to be safer.
          </div>
          <div>
            The CI is too wide in comparison to the ROPE. Collect more data to be safer.
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="makeStyles-plots-32"
  />
</div>
`;

exports[`renders the condensed table with some analyses in non-debug mode for a Conversion Metric 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "className": "makeStyles-plot-33",
        "data": Array [
          Object {
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "test: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              -1.123,
            ],
          },
          Object {
            "fill": "tonexty",
            "fillcolor": "rgba(71, 27, 92, .3)",
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "test: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              1,
            ],
          },
          Object {
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "control: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              0,
            ],
          },
          Object {
            "fill": "tonexty",
            "fillcolor": "rgba(205, 112, 85, .3)",
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "control: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              10,
            ],
          },
        ],
        "debug": false,
        "layout": Object {
          "autosize": true,
          "hoverlabel": Object {
            "namelength": -1,
          },
          "margin": Object {
            "b": 48,
            "l": 80,
            "r": 16,
            "t": 64,
          },
          "showlegend": false,
          "title": "Variation Credible Intervals",
          "yaxis": Object {
            "title": "Metric Estimates (x100 %)",
          },
        },
        "style": Object {
          "display": "inline-block",
          "position": "relative",
        },
        "useResizeHandler": false,
      },
      Object {},
    ],
    Array [
      Object {
        "className": "makeStyles-plot-33",
        "data": Array [
          Object {
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "difference: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              -0.01,
            ],
          },
          Object {
            "fill": "tonexty",
            "fillcolor": "rgba(0,0,0,.2)",
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "difference: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              0.01,
            ],
          },
          Object {
            "line": Object {
              "color": "rgba(0,0,0,.4)",
              "dash": "dash",
            },
            "mode": "lines",
            "name": "ROPE: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              -12,
            ],
          },
          Object {
            "line": Object {
              "color": "rgba(0,0,0,.4)",
              "dash": "dash",
            },
            "mode": "lines",
            "name": "ROPE: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              12,
            ],
          },
        ],
        "debug": false,
        "layout": Object {
          "autosize": true,
          "hoverlabel": Object {
            "namelength": -1,
          },
          "margin": Object {
            "b": 48,
            "l": 80,
            "r": 16,
            "t": 64,
          },
          "showlegend": false,
          "title": "Difference Credible Interval",
          "yaxis": Object {
            "title": "Difference Estimate (x100 %)",
          },
        },
        "style": Object {
          "display": "inline-block",
          "position": "relative",
        },
        "useResizeHandler": false,
      },
      Object {},
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`renders the condensed table with some analyses in non-debug mode for a Revenue Metric 1`] = `
<div
  class="analysis-latest-results"
>
  <div
    class="makeStyles-root-35"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
      style="position: relative;"
    >
      <div
        class="Component-horizontalScrollContainer-41"
        style="overflow-x: auto; position: relative;"
      >
        <div>
          <div
            style="overflow-y: auto;"
          >
            <div>
              <table
                class="MuiTable-root"
                style="table-layout: auto;"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-42 MuiTableCell-paddingNone"
                      scope="col"
                      style="font-weight: 700;"
                    />
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-42 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Metric
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-42 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Attribution window
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-42 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Recommendation
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="0"
                    level="0"
                    path="0"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                          disabled=""
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_1
                       
                      <div
                        aria-disabled="true"
                        class="MuiChip-root makeStyles-primaryChip-36 MuiChip-outlined Mui-disabled"
                      >
                        <span
                          class="MuiChip-label"
                        >
                          Primary
                        </span>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      1 week
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Manual analysis required
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="1"
                    level="0"
                    path="1"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                          disabled=""
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_2
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      4 weeks
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Not analyzed yet
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="2"
                    level="0"
                    path="2"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                          disabled=""
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_2
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      1 hour
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Not analyzed yet
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="3"
                    level="0"
                    path="3"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root"
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_3
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      6 hours
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Deploy 
                      test
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the condensed table with some analyses in non-debug mode for a Revenue Metric 2`] = `
<div
  class="MuiTableContainer-root makeStyles-root-43 analysis-detail-panel"
>
  <table
    class="MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          role="cell"
          scope="row"
        >
          Last analyzed
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <span
            class="makeStyles-root-48"
            title="09/05/2020, 20:00:00"
          >
            2020-05-10
          </span>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          role="cell"
          scope="row"
        >
          Analysis strategy
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-dataCell-45"
        >
          Exposed without crossovers and spammers
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          role="cell"
          scope="row"
        >
          Analyzed participants
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-dataCell-45"
        >
          1400
           (
          140
           not final
          <span>
            ; 
            840
             in 
            control
          </span>
          <span>
            ; 
            560
             in 
            test
          </span>
          )
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          role="cell"
          scope="row"
        >
          Difference interval
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-dataCell-45"
        >
          [
          -0.01
          ,
          0.01
          ]
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          role="cell"
          scope="row"
        >
          Warnings
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-dataCell-45"
        >
          <div>
            Experiment period is too short. Wait a few days to be safer.
          </div>
          <div>
            The CI is too wide in comparison to the ROPE. Collect more data to be safer.
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="makeStyles-plots-46"
  />
</div>
`;

exports[`renders the condensed table with some analyses in non-debug mode for a Revenue Metric 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "className": "makeStyles-plot-47",
        "data": Array [
          Object {
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "test: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              -1.123,
            ],
          },
          Object {
            "fill": "tonexty",
            "fillcolor": "rgba(71, 27, 92, .3)",
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "test: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              1,
            ],
          },
          Object {
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "control: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              0,
            ],
          },
          Object {
            "fill": "tonexty",
            "fillcolor": "rgba(205, 112, 85, .3)",
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "control: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              10,
            ],
          },
        ],
        "debug": false,
        "layout": Object {
          "autosize": true,
          "hoverlabel": Object {
            "namelength": -1,
          },
          "margin": Object {
            "b": 48,
            "l": 80,
            "r": 16,
            "t": 64,
          },
          "showlegend": false,
          "title": "Variation Credible Intervals",
          "yaxis": Object {
            "title": "Metric Estimates ($)",
          },
        },
        "style": Object {
          "display": "inline-block",
          "position": "relative",
        },
        "useResizeHandler": false,
      },
      Object {},
    ],
    Array [
      Object {
        "className": "makeStyles-plot-47",
        "data": Array [
          Object {
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "difference: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              -0.01,
            ],
          },
          Object {
            "fill": "tonexty",
            "fillcolor": "rgba(0,0,0,.2)",
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "difference: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              0.01,
            ],
          },
          Object {
            "line": Object {
              "color": "rgba(0,0,0,.4)",
              "dash": "dash",
            },
            "mode": "lines",
            "name": "ROPE: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              -12,
            ],
          },
          Object {
            "line": Object {
              "color": "rgba(0,0,0,.4)",
              "dash": "dash",
            },
            "mode": "lines",
            "name": "ROPE: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              12,
            ],
          },
        ],
        "debug": false,
        "layout": Object {
          "autosize": true,
          "hoverlabel": Object {
            "namelength": -1,
          },
          "margin": Object {
            "b": 48,
            "l": 80,
            "r": 16,
            "t": 64,
          },
          "showlegend": false,
          "title": "Difference Credible Interval",
          "yaxis": Object {
            "title": "Difference Estimate ($)",
          },
        },
        "style": Object {
          "display": "inline-block",
          "position": "relative",
        },
        "useResizeHandler": false,
      },
      Object {},
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`renders the full tables with some analyses and a different primary metric in debug mode 1`] = `
<div
  class="analysis-participant-counts"
>
  <h3>
    Participant counts for the primary metric
  </h3>
  <div
    class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    style="position: relative;"
  >
    <div
      class="Component-horizontalScrollContainer-15"
      style="overflow-x: auto; position: relative;"
    >
      <div>
        <div
          style="overflow-y: auto;"
        >
          <div>
            <table
              class="MuiTable-root"
              style="table-layout: auto;"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-16 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    Strategy
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-16 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    Total
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-16 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    control
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-16 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    test
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                  index="0"
                  level="0"
                  path="0"
                  style="transition: all ease 300ms; opacity: 0.8;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    All participants
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    10
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    10
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the full tables with some analyses and a different primary metric in debug mode 2`] = `[MockFunction]`;

exports[`renders the full tables with some analyses in debug mode 1`] = `
<div
  class="makeStyles-root-8 debug-json"
>
  <p
    class="MuiTypography-root makeStyles-label-10 MuiTypography-body1"
  >
    All analysis objects (16)
  </p>
  <p
    class="MuiTypography-root makeStyles-pre-9 MuiTypography-body1"
  >
    [
  {
    "metricAssignmentId": 123,
    "analysisStrategy": "itt_pure",
    "participantStats": {
      "total": 1000,
      "not_final": 100,
      "variation_1": 600,
      "variation_2": 400
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": true,
      "chosenVariationId": 2,
      "reason": "ci_in_rope",
      "warnings": [
        "short_period",
        "wide_ci"
      ]
    },
    "analysisDatetime": "2020-05-10T00:00:00.000Z",
    "tableData": {
      "id": 0
    }
  },
  {
    "metricAssignmentId": 123,
    "analysisStrategy": "mitt_no_crossovers",
    "participantStats": {
      "total": 900,
      "not_final": 90,
      "variation_1": 540,
      "variation_2": 360
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": false,
      "chosenVariationId": null,
      "reason": "rope_in_ci",
      "warnings": []
    },
    "analysisDatetime": "2020-05-10T00:00:00.000Z",
    "tableData": {
      "id": 1
    }
  },
  {
    "metricAssignmentId": 123,
    "analysisStrategy": "mitt_no_spammers",
    "participantStats": {
      "total": 850,
      "not_final": 85,
      "variation_1": 510,
      "variation_2": 340
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": true,
      "chosenVariationId": null,
      "reason": "ci_in_rope",
      "warnings": []
    },
    "analysisDatetime": "2020-05-10T00:00:00.000Z",
    "tableData": {
      "id": 2
    }
  },
  {
    "metricAssignmentId": 123,
    "analysisStrategy": "mitt_no_spammers_no_crossovers",
    "participantStats": {
      "total": 800,
      "not_final": 80,
      "variation_1": 480,
      "variation_2": 320
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": true,
      "chosenVariationId": 2,
      "reason": "ci_in_rope",
      "warnings": [
        "short_period",
        "wide_ci"
      ]
    },
    "analysisDatetime": "2020-05-10T00:00:00.000Z",
    "tableData": {
      "id": 3
    }
  },
  {
    "metricAssignmentId": 123,
    "analysisStrategy": "pp_naive",
    "participantStats": {
      "total": 700,
      "not_final": 70,
      "variation_1": 420,
      "variation_2": 280
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": true,
      "chosenVariationId": 2,
      "reason": "ci_in_rope",
      "warnings": [
        "short_period",
        "wide_ci"
      ]
    },
    "analysisDatetime": "2020-05-10T00:00:00.000Z",
    "tableData": {
      "id": 4
    }
  },
  {
    "metricAssignmentId": 123,
    "analysisStrategy": "itt_pure",
    "participantStats": {
      "total": 100,
      "not_final": 10,
      "variation_1": 60,
      "variation_2": 40
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": true,
      "chosenVariationId": 2,
      "reason": "ci_in_rope",
      "warnings": [
        "short_period",
        "wide_ci"
      ]
    },
    "analysisDatetime": "2020-05-09T00:00:00.000Z"
  },
  {
    "metricAssignmentId": 123,
    "analysisStrategy": "mitt_no_crossovers",
    "participantStats": {
      "total": 90,
      "not_final": 9,
      "variation_1": 54,
      "variation_2": 36
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": false,
      "chosenVariationId": null,
      "reason": "rope_in_ci",
      "warnings": []
    },
    "analysisDatetime": "2020-05-09T00:00:00.000Z"
  },
  {
    "metricAssignmentId": 123,
    "analysisStrategy": "mitt_no_spammers",
    "participantStats": {
      "total": 85,
      "not_final": 8,
      "variation_1": 51,
      "variation_2": 34
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": true,
      "chosenVariationId": null,
      "reason": "ci_in_rope",
      "warnings": []
    },
    "analysisDatetime": "2020-05-09T00:00:00.000Z"
  },
  {
    "metricAssignmentId": 123,
    "analysisStrategy": "mitt_no_spammers_no_crossovers",
    "participantStats": {
      "total": 80,
      "not_final": 8,
      "variation_1": 48,
      "variation_2": 32
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": true,
      "chosenVariationId": 2,
      "reason": "ci_in_rope",
      "warnings": [
        "short_period",
        "wide_ci"
      ]
    },
    "analysisDatetime": "2020-05-09T00:00:00.000Z"
  },
  {
    "metricAssignmentId": 123,
    "analysisStrategy": "pp_naive",
    "participantStats": {
      "total": 70,
      "not_final": 7,
      "variation_1": 42,
      "variation_2": 28
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": true,
      "chosenVariationId": 2,
      "reason": "ci_in_rope",
      "warnings": [
        "short_period",
        "wide_ci"
      ]
    },
    "analysisDatetime": "2020-05-09T00:00:00.000Z"
  },
  {
    "metricAssignmentId": 124,
    "analysisStrategy": "itt_pure",
    "participantStats": {
      "total": 10,
      "not_final": 10,
      "variation_1": 10
    },
    "metricEstimates": null,
    "recommendation": null,
    "analysisDatetime": "2020-05-10T00:00:00.000Z",
    "tableData": {
      "id": 0
    }
  },
  {
    "metricAssignmentId": 126,
    "analysisStrategy": "itt_pure",
    "participantStats": {
      "total": 2000,
      "not_final": 200,
      "variation_1": 1200,
      "variation_2": 800
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": true,
      "chosenVariationId": 2,
      "reason": "ci_in_rope",
      "warnings": [
        "short_period",
        "wide_ci"
      ]
    },
    "analysisDatetime": "2020-05-10T00:00:00.000Z",
    "tableData": {
      "id": 0
    }
  },
  {
    "metricAssignmentId": 126,
    "analysisStrategy": "mitt_no_crossovers",
    "participantStats": {
      "total": 1800,
      "not_final": 180,
      "variation_1": 1080,
      "variation_2": 720
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": true,
      "chosenVariationId": 2,
      "reason": "ci_in_rope",
      "warnings": [
        "short_period",
        "wide_ci"
      ]
    },
    "analysisDatetime": "2020-05-10T00:00:00.000Z",
    "tableData": {
      "id": 1
    }
  },
  {
    "metricAssignmentId": 126,
    "analysisStrategy": "mitt_no_spammers",
    "participantStats": {
      "total": 1700,
      "not_final": 170,
      "variation_1": 920,
      "variation_2": 780
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": true,
      "chosenVariationId": 2,
      "reason": "ci_in_rope",
      "warnings": [
        "short_period",
        "wide_ci"
      ]
    },
    "analysisDatetime": "2020-05-10T00:00:00.000Z",
    "tableData": {
      "id": 2
    }
  },
  {
    "metricAssignmentId": 126,
    "analysisStrategy": "mitt_no_spammers_no_crossovers",
    "participantStats": {
      "total": 1600,
      "not_final": 160,
      "variation_1": 960,
      "variation_2": 640
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": true,
      "chosenVariationId": 2,
      "reason": "ci_in_rope",
      "warnings": [
        "short_period",
        "wide_ci"
      ]
    },
    "analysisDatetime": "2020-05-10T00:00:00.000Z",
    "tableData": {
      "id": 3
    }
  },
  {
    "metricAssignmentId": 126,
    "analysisStrategy": "pp_naive",
    "participantStats": {
      "total": 1400,
      "not_final": 140,
      "variation_1": 840,
      "variation_2": 560
    },
    "metricEstimates": {
      "diff": {
        "estimate": 0,
        "bottom": -0.01,
        "top": 0.01
      },
      "variation_1": {
        "estimate": 0.12,
        "bottom": 0,
        "top": 10
      },
      "variation_2": {
        "estimate": -0.12,
        "bottom": -1.123,
        "top": 1
      }
    },
    "recommendation": {
      "endExperiment": true,
      "chosenVariationId": 2,
      "reason": "ci_in_rope",
      "warnings": [
        "short_period",
        "wide_ci"
      ]
    },
    "analysisDatetime": "2020-05-10T00:00:00.000Z",
    "tableData": {
      "id": 4
    }
  }
]
  </p>
</div>
`;

exports[`renders the full tables with some analyses in debug mode 2`] = `
<div
  class="analysis-participant-counts"
>
  <h3>
    Participant counts for the primary metric
  </h3>
  <div
    class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    style="position: relative;"
  >
    <div
      class="Component-horizontalScrollContainer-5"
      style="overflow-x: auto; position: relative;"
    >
      <div>
        <div
          style="overflow-y: auto;"
        >
          <div>
            <table
              class="MuiTable-root"
              style="table-layout: auto;"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    Strategy
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    Total
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    control
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                    scope="col"
                    style="font-weight: 700; box-sizing: border-box;"
                  >
                    test
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                  index="0"
                  level="0"
                  path="0"
                  style="transition: all ease 300ms; opacity: 0.8;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    All participants
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    1000
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    600
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    400
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="1"
                  level="0"
                  path="1"
                  style="transition: all ease 300ms; opacity: 0.8;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    Without crossovers
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    900
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    540
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    360
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="2"
                  level="0"
                  path="2"
                  style="transition: all ease 300ms; opacity: 0.8;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    Without spammers
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    850
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    510
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    340
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="3"
                  level="0"
                  path="3"
                  style="transition: all ease 300ms; opacity: 0.8;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    Without crossovers and spammers
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    800
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    480
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    320
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="4"
                  level="0"
                  path="4"
                  style="transition: all ease 300ms; opacity: 0.8;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    Exposed without crossovers and spammers
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    700
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    420
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                  >
                    280
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the full tables with some analyses in debug mode 3`] = `
<div
  class="analysis-latest-results"
>
  <h3>
    Latest results by metric
  </h3>
  <div>
    <h6
      class="MuiTypography-root MuiTypography-subtitle1"
    >
      <strong>
        <code>
          metric_1
        </code>
      </strong>
       
      with 
      1 week
       attribution,
       
      last analyzed on 
      <span
        class="makeStyles-root-7"
        title="09/05/2020, 20:00:00"
      >
        2020-05-10
      </span>
    </h6>
    <div
      class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
      style="position: relative;"
    >
      <div
        class="Component-horizontalScrollContainer-5"
        style="overflow-x: auto; position: relative;"
      >
        <div>
          <div
            style="overflow-y: auto;"
          >
            <div>
              <table
                class="MuiTable-root"
                style="table-layout: auto;"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Strategy
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Participants (not final)
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Difference interval
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Recommendation
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Warnings
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root"
                    index="0"
                    level="0"
                    path="0"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      All participants
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      1000 (100)
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy 
                      test
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="1"
                    level="0"
                    path="1"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Without crossovers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      900 (90)
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Inconclusive
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    />
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="2"
                    level="0"
                    path="2"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Without spammers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      850 (85)
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy either variation
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    />
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="3"
                    level="0"
                    path="3"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Without crossovers and spammers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      800 (80)
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy 
                      test
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="4"
                    level="0"
                    path="4"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Exposed without crossovers and spammers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      700 (70)
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy 
                      test
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <br />
  </div>
  <div>
    <h6
      class="MuiTypography-root MuiTypography-subtitle1"
    >
      <strong>
        <code>
          metric_2
        </code>
      </strong>
       
      with 
      4 weeks
       attribution,
       
      last analyzed on 
      <span
        class="makeStyles-root-7"
        title="09/05/2020, 20:00:00"
      >
        2020-05-10
      </span>
    </h6>
    <div
      class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
      style="position: relative;"
    >
      <div
        class="Component-horizontalScrollContainer-5"
        style="overflow-x: auto; position: relative;"
      >
        <div>
          <div
            style="overflow-y: auto;"
          >
            <div>
              <table
                class="MuiTable-root"
                style="table-layout: auto;"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Strategy
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Participants (not final)
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Difference interval
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Recommendation
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Warnings
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root"
                    index="0"
                    level="0"
                    path="0"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      All participants
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      10 (10)
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      N/A
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    />
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <br />
  </div>
  <div>
    <h6
      class="MuiTypography-root MuiTypography-subtitle1"
    >
      <strong>
        <code>
          metric_2
        </code>
      </strong>
       
      with 
      1 hour
       attribution,
       
      <strong>
        not analyzed yet
      </strong>
    </h6>
    <div
      class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
      style="position: relative;"
    >
      <div
        class="Component-horizontalScrollContainer-5"
        style="overflow-x: auto; position: relative;"
      >
        <div>
          <div
            style="overflow-y: auto;"
          >
            <div>
              <table
                class="MuiTable-root"
                style="table-layout: auto;"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Strategy
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Participants (not final)
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Difference interval
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Recommendation
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Warnings
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                />
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <br />
  </div>
  <div>
    <h6
      class="MuiTypography-root MuiTypography-subtitle1"
    >
      <strong>
        <code>
          metric_3
        </code>
      </strong>
       
      with 
      6 hours
       attribution,
       
      last analyzed on 
      <span
        class="makeStyles-root-7"
        title="09/05/2020, 20:00:00"
      >
        2020-05-10
      </span>
    </h6>
    <div
      class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
      style="position: relative;"
    >
      <div
        class="Component-horizontalScrollContainer-5"
        style="overflow-x: auto; position: relative;"
      >
        <div>
          <div
            style="overflow-y: auto;"
          >
            <div>
              <table
                class="MuiTable-root"
                style="table-layout: auto;"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Strategy
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Participants (not final)
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Difference interval
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Recommendation
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-6 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Warnings
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root"
                    index="0"
                    level="0"
                    path="0"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      All participants
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      2000 (200)
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy 
                      test
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="1"
                    level="0"
                    path="1"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Without crossovers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      1800 (180)
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy 
                      test
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="2"
                    level="0"
                    path="2"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Without spammers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      1700 (170)
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy 
                      test
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="3"
                    level="0"
                    path="3"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Without crossovers and spammers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      1600 (160)
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy 
                      test
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                    index="4"
                    level="0"
                    path="4"
                    style="transition: all ease 300ms; opacity: 0.8;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Exposed without crossovers and spammers
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      1400 (140)
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      [-0.01, 0.01]
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      Deploy 
                      test
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box;"
                    >
                      <div>
                        Experiment period is too short. Wait a few days to be safer.
                      </div>
                      <div>
                        The CI is too wide in comparison to the ROPE. Collect more data to be safer.
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <br />
  </div>
</div>
`;

exports[`renders the full tables with some analyses in debug mode 4`] = `[MockFunction]`;
